--- a/styles/header.css
+++ b/styles/header.css
@@ -57,3 +57,12 @@
 .container__botao {
     display: none;
 }
+
+.menu-hamburguer_domeio{
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
