--- a/styles/header.css
+++ b/styles/header.css
@@ -7,6 +7,15 @@
     background-position: center;
 }
 
+.menu-hamburguer_domeio{
+
+    width: 24px;
+    height: 24px;
+    display: inline-block;
+    background-image: url("../img/Menu.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+}
 .cabeçalho {
     background-color: var(--branco);
     display: flex;
