--- a/styles/carrossel.css
+++ b/styles/carrossel.css
@@ -1,11 +1,39 @@
-.carrossel__titulo {
+.carrossel__menu{
+
+    display:none
+}
+
+.container__botao_carrosel:checked ~ .carrossel__menu{
+
+ display:block;
+ background-color: var(--branco);
+ 
+}
+
+.carrossel__titulo1{
+
     color: var(--laranja);
-    background-color: var(--branco);
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 700;
+    padding: 1em 0 0.5em 0;
+    display: flex;
+    justify-content: center;
+    
+}
+
+.carrossel__titulo{
+
+    color: var(--laranja);
     text-align: center;
     text-transform: uppercase;
     font-size: 18px;
     font-weight: 700;
     padding: 1em 0 0.5em 0;
+    display: block;
+    margin: 0 auto;
+    margin-top: 25px;
+    
 }
 
 .swiper-button-prev,
@@ -18,6 +46,19 @@
     position: initial;
     margin: .5em 0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .card {
     background: var(--branco);
@@ -71,3 +112,6 @@
 .botões__item {
     margin: 0 0.5em;
 }
+
+
+
